# 3D-object-detection-and-recognition-with-microsoft-kinect-and-deep-neural-networks

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/kinect_yolo/: KinectToCVMat.hpp
launch/: kinect.launch
msg/: DepthAndDetections.msg
src/: KinectToCVMat.cpp  kinect_yolo_node.cpp
